# MWPLog

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  install_manifest.txt  kill_log.sh  log.sh
BlynkLog/: CMakeLists.txt  Makefile  blynkLog  blynkLog.c  cmake_install.cmake  config.c  config.h  logC2_config.json
SysLog/: Makefile  cmake_install.cmake  log.c
config/: blynk_log.json  logC1_config.json
log_data/: CMakeLists.txt  Makefile  cmake_install.cmake
log_data/cmd/logit/: main.go
log_data/cmd/logitdebug/: main.go
log_data/docs/: CONTEXT.md  grafana_install.md
mwp_data_service/: CMakeLists.txt  Makefile  cmake_install.cmake  go.mod  go.sum
mwp_data_service/cmd/mwp_data_service/: main.go
mwp_data_service/config/: config.yaml
mwp_data_service/internal/aggregation/: aggregator.go
mwp_data_service/internal/config/: config.go
mwp_data_service/internal/datastore/: store.go
mwp_data_service/internal/service/: file_writer.go
mylib_build/: Makefile  cmake_install.cmake
notes/: mwp_data_service_plan.md
output/: watertable_after_query.json  watertable_initial.json  watertable_initial_report.txt  watertable_latest.json  watertable_latest_report.txt  watertable_report.txt  watertable_report_after_query.txt
